# VibeDoc

./: .env.example  .gitignore  README.md  pyproject.toml  test_file.py
Non-code(plan)/: plan.md
src/vibedoc/: __init__.py  cli.py  config.py  log.py
src/vibedoc/llm/: __init__.py  base.py
tests/: test_llm.py
