[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibedoc"
version = "0.1.0"
description = "AI-powered repository documentation generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.14.0",
    "openai>=1.57.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]

[project.scripts]
vibedoc = "vibedoc.cli:app"

[tool.setuptools.packages.find]
where = ["src"]